[project]
name = "brain-block"
version = "0.1.0"
description = ""
authors = [
    {name = "Sabrina0227",email = "godknowspe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "dlx (>=1.0.4,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "screeninfo (>=0.8.1,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
